----------------------------------------------
                 TeamTalk
----------------------------------------------

Version 5.22, unreleased
Default Qt Client
- Updated Qt to 6.10.2 on Windows and macOS
- Option to disable sound device detection notifications in statusbar events
- Ukranian translation
- Speak Client Statistics now refreshes ping on Ctrl+T
- Fixed bug where the value of the Show chat history as list view instead of text edit setting was sometimes deleted
- Fixed bug where only first resolved IP-address was used for connection attempt
Android Client
- Changed client name display format from "<ClientName> version <Version>" to "<ClientName> <Version>"
- Join last channel checkbox is now disabled by default in Server Properties Dialog
- Maximum bitrate can be specified in SpeexVBR
- Fixed bug where TeamTalk would crash when entering TTS settings
- Fixed bug where the initial volume of media files did not match the settings screen
- Fixed bug where status messages would not be set at login
- Fixed bug where join and leave events were not announced when focused on another channel
- Fixed bug where only first resolved IP-address was used for connection attempt
iOS Client
- Ukranian translation
- Fixed bug where only first resolved IP-address was used for connection attempt
Server
-

Version 5.21.1, 2025/11/13
Server
- TeamTalk Pro option -weblogin to store BearWare.dk WebLogin in tt5prosrv.xml
- TeamTalk Pro option -tokenlogin to store BearWare.dk WebLogin in tt5prosrv.xml

Version 5.21, 2025/09/29
Default Qt Client
- Fixed Windows freeze issue closing Preferences dialog
- Windows changed to Qt 6.9.2
Server
- TeamTalk Pro server requires BearWare.dk WebLogin to start
- Fixed crash issue when sharing large desktop windows

Version 5.20.1, 2025/09/15
Android Client
- Fixed restoring of microphone gain to value from preferences at application start
- Fixed microphone gain to not drop to 0 when slider is at 0%

Version 5.20, 2025/09/14
Default Qt Client