@@ -4,5 +4,5 @@ SET CHERE_INVOKING=1
 IF EXIST build-@LIBVPX_WIN_TARGET@ RMDIR /Q /S build-@LIBVPX_WIN_TARGET@
 MKDIR build-@LIBVPX_WIN_TARGET@
 CD build-@LIBVPX_WIN_TARGET@
-@LIBVPX_BASH_EXE_PATH@ --login -c "../configure --target=@LIBVPX_WIN_TARGET@ --disable-examples --disable-docs --enable-static-msvcrt --disable-unit-tests && make"
+@BASH_EXE_PATH@ --login -c "../configure --target=@LIBVPX_WIN_TARGET@ --disable-examples --disable-docs --enable-static-msvcrt --disable-unit-tests && make"
 CD ..
